--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
   <header class="sticky top-0 z-50 backdrop-blur bg-black/30">
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
       <a href="#" class="flex items-center gap-3 group">
-        <div class="w-8 h-8 rounded-xl bg-ct.accent/20 border border-white/10 grid place-items-center">
-          <span class="text-lg">CT</span>
-        </div>
+        <img src="img/logo-ct.png" alt="Common Things logo" class="w-8 h-8 object-contain shrink-0" />
         <span class="font-extrabold tracking-tight">Common Things</span>
       </a>
       <nav class="hidden md:flex items-center gap-6 text-sm">
@@ -102,7 +100,7 @@
       </div>
       <div class="relative">
         <div class="aspect-square w-full rounded-3xl overflow-hidden shadow-2xl ring-1 ring-white/10">
-          <img src="/assets/ep-cover.jpg" alt="EP cover — A cat in the box watching TV" class="w-full h-full object-cover" />
+          <img src="img/A cat in the box watching TV.png" alt="EP cover — A cat in the box watching TV" class="w-full h-full object-cover" />
         </div>
       </div>
     </div>
@@ -113,7 +111,6 @@
     <div class="max-w-7xl mx-auto px-4">
       <div class="flex items-end justify-between mb-6">
         <h2 class="text-2xl md:text-3xl font-extrabold">Singles</h2>
-        <p class="text-white/60 text-sm">Dates are set — players unlock automatically on release.</p>
       </div>
       <div id="singlesGrid" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
     </div>
@@ -123,7 +120,148 @@
   <section id="about" class="py-16">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-2xl md:text-3xl font-extrabold mb-4">About</h2>
-      <p class="text-white/80 leading-relaxed">Common Things is a virtual band where five everyday things come from five different animation worlds — memes, anime, stop‑motion, comics, and cartoons. They don’t tell their backstories in the songs, but each track carries a slice of their personality.</p>
+<!-- Intro -->
+<div class="space-y-4">
+  <p class="text-white/90 text-lg leading-relaxed">
+    Common Things is a fictional musical group where each character comes from a different animation world — everyday things with big hearts.
+  </p>
+  <h3 class="text-white/70 text-sm uppercase tracking-widest">Meet its five members</h3>
+</div>
+
+<!-- Grid -->
+<ul class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+
+  <!-- Gato -->
+  <li class="rounded-2xl bg-ct.card/70 ring-1 ring-white/10 hover:ring-white/20 transition p-5">
+    <div class="flex items-center gap-3">
+      <div class="h-10 w-10 rounded-xl bg-ct.accent/15 ring-1 ring-ct.accent/30 grid place-items-center text-ct.accent text-lg">🐱</div>
+      <div>
+        <h4 class="text-lg font-bold">Gato</h4>
+        <p class="text-xs text-white/60">Vocals · Meme world</p>
+      </div>
+    </div>
+    <p class="mt-3 text-white/80 leading-relaxed">
+      A cat from the meme universe, a funny, cuddly PNG (with raccoon vibes). He can’t speak without his best friend “CC” — the subtitles that live in his backpack —; even so, he’s the band’s lead singer.
+    </p>
+    <div class="mt-4 flex flex-wrap gap-2">
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">Vocals</span>
+      <span class="px-2 py-1 text-xs rounded-full bg-ct.accent/15 text-ct.accent">Memes</span>
+    </div>
+  </li>
+
+  <!-- EYE SEE U -->
+  <li class="rounded-2xl bg-ct.card/70 ring-1 ring-white/10 hover:ring-white/20 transition p-5">
+    <div class="flex items-center gap-3">
+      <div class="h-10 w-10 rounded-xl bg-ct.pink/15 ring-1 ring-ct.pink/30 grid place-items-center text-ct.pink text-lg">👁️</div>
+      <div>
+        <h4 class="text-lg font-bold">EYE SEE U</h4>
+        <p class="text-xs text-white/60">Keyboards · Anime world</p>
+      </div>
+    </div>
+    <p class="mt-3 text-white/80 leading-relaxed">
+      A creature straight out of anime. Extremely tall, always dressed formally — though barefoot —, and his head is an eye that changes color with his emotions. Mysterious, but an impeccable keyboardist.
+    </p>
+    <div class="mt-4 flex flex-wrap gap-2">
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">Keyboards</span>
+      <span class="px-2 py-1 text-xs rounded-full bg-ct.pink/15 text-ct.pink">Anime</span>
+    </div>
+  </li>
+
+  <!-- Boxhead -->
+  <li class="rounded-2xl bg-ct.card/70 ring-1 ring-white/10 hover:ring-white/20 transition p-5">
+    <div class="flex items-center gap-3">
+      <div class="h-10 w-10 rounded-xl bg-white/10 ring-1 ring-white/15 grid place-items-center text-white/80 text-lg">📦</div>
+      <div>
+        <h4 class="text-lg font-bold">Boxhead</h4>
+        <p class="text-xs text-white/60">DJ · Stop-motion world</p>
+      </div>
+    </div>
+    <p class="mt-3 text-white/80 leading-relaxed">
+      Does he have a box on his head or is the box his head? No one knows. He hails from stop-motion and is an incredible DJ. Gets along great with Gato, for obvious reasons.
+    </p>
+    <div class="mt-4 flex flex-wrap gap-2">
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">DJ</span>
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">Stop-motion</span>
+    </div>
+  </li>
+
+  <!-- Alien05 -->
+  <li class="rounded-2xl bg-ct.card/70 ring-1 ring-white/10 hover:ring-white/20 transition p-5">
+    <div class="flex items-center gap-3">
+      <div class="h-10 w-10 rounded-xl bg-ct.accent2/20 ring-1 ring-ct.accent2/30 grid place-items-center text-ct.accent2 text-lg">👽</div>
+      <div>
+        <h4 class="text-lg font-bold">Alien05</h4>
+        <p class="text-xs text-white/60">Drums · Comic world</p>
+      </div>
+    </div>
+    <p class="mt-3 text-white/80 leading-relaxed">
+      The band’s “star” (or so he says). Comic-book born, talks nonstop and makes a lot of noise; a free spirit and a bit foul-mouthed. He plays drums in Common Things.
+    </p>
+    <div class="mt-4 flex flex-wrap gap-2">
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">Drums</span>
+      <span class="px-2 py-1 text-xs rounded-full bg-ct.accent2/20 text-ct.accent2">Comics</span>
+    </div>
+  </li>
+
+  <!-- TiVi -->
+  <li class="rounded-2xl bg-ct.card/70 ring-1 ring-white/10 hover:ring-white/20 transition p-5">
+    <div class="flex items-center gap-3">
+      <div class="h-10 w-10 rounded-xl bg-white/10 ring-1 ring-white/15 grid place-items-center text-white/80 text-lg">📺</div>
+      <div>
+        <h4 class="text-lg font-bold">TiVi</h4>
+        <p class="text-xs text-white/60">Bass · Cartoon world</p>
+      </div>
+    </div>
+    <p class="mt-3 text-white/80 leading-relaxed">
+      Our little TiVi, the most adorable. A bundle of fragile cables with a television for a head; it’s so heavy he has to drag it when he walks. He comes from the cartoon world and plays bass like no one else (no one knows how he does it without fingers).
+    </p>
+    <div class="mt-4 flex flex-wrap gap-2">
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">Bass</span>
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">Cartoon</span>
+    </div>
+  </li>
+
+
+  
+<li
+  class="relative group rounded-2xl bg-ct.card/70 ring-1 ring-white/10 p-5 opacity-60 grayscale hover:opacity-70 transition cursor-not-allowed"
+  aria-disabled="true" tabindex="-1"
+>
+  <!-- Contenido original (sin interacción) -->
+  <div class="pointer-events-none">
+    <div class="flex items-center gap-3">
+      <div class="h-10 w-10 rounded-xl bg-white/10 ring-1 ring-white/15 grid place-items-center text-white/80 text-lg">🎭</div>
+      <div>
+        <h4 class="text-lg font-bold">HF</h4>
+        <p class="text-xs text-white/60">??????</p>
+      </div>
+    </div>
+    <p class="mt-3 text-white/80 leading-relaxed">
+      ????????????????? 
+    </p>
+    <div class="mt-4 flex flex-wrap gap-2">
+      <span class="px-2 py-1 text-xs rounded-full bg-white/10">?????????</span>
+    </div>
+  </div>
+
+  <!-- Chip “misterio” -->
+  <span class="absolute top-3 right-3 px-2 py-1 text-[10px] uppercase tracking-widest rounded-full bg-white/10 ring-1 ring-white/15 text-white/70">
+    ????????
+  </span>
+
+  <!-- Overlay de bloqueo -->
+  <div class="absolute inset-0 rounded-2xl bg-black/40 backdrop-blur-sm ring-1 ring-inset ring-white/10 grid place-items-center">
+    <div class="flex items-center gap-2 text-white/80 text-sm">
+      <span class="inline-block text-base animate-pulse">🔒</span>
+      <span class="tracking-wide">?????</span>
+    </div>
+  </div>
+</li>
+
+ 
+
+</ul>
+
     </div>
   </section>
 
@@ -141,8 +279,8 @@
         <a href="/assets/EPK_OneSheet.pdf" class="mt-5 inline-flex items-center gap-2 px-5 py-3 rounded-xl bg-white text-black font-semibold">Download one‑sheet (PDF)</a>
       </div>
       <div class="rounded-2xl overflow-hidden ring-1 ring-white/10 bg-ct.card">
-        <img src="/assets/press-photo.jpg" alt="Common Things — teaser still" class="w-full h-64 object-cover" />
-        <div class="p-5 text-sm text-white/70">Teaser still — replace with your visualizer frame.</div>
+        <img src="img/Banda-gorros.png" alt="Common Things — teaser still" class="w-full h-64 object-cover" />
+        <div class="p-5 text-sm text-white/70">Common things —— (Where is GaTo?)</div>
       </div>
     </div>
   </section>
@@ -166,57 +304,63 @@
     const singles = [
       {
         key: 'gato',
-        title: 'Gato',
-        date: '2025-11-14',
+        title: 'GaTo',
+        date: '2025-10-21',
         role: 'Lead Single',
-        cover: '/assets/singles/gato.jpg',
-        spotifyId: 'REPLACE_SPOTIFY_TRACK_ID_GATO',
-        youtube: 'REPLACE_YOUTUBE_URL_GATO'
+        cover: 'img/Gato.jpg',
+        spotifyId: '1D2NIYS2OO4jKhipejgiMw',
+        youtube: 'https://youtu.be/Bc_53U1znRU?si=qlc30k8oZDeclxmk',
+        locked: false
       },
       {
         key: 'eye-see-u',
         title: 'EYE SEE U',
         date: '2025-11-28',
         role: 'Single',
-        cover: '/assets/singles/eyeseeu.jpg',
+        cover: 'img/EYESEEU.jpg',
         spotifyId: 'REPLACE_SPOTIFY_TRACK_ID_EYE',
-        youtube: 'REPLACE_YOUTUBE_URL_EYE'
+        youtube: 'REPLACE_YOUTUBE_URL_EYE',
+        locked: false
       },
       {
         key: 'boxhead',
         title: 'Boxhead',
         date: '2025-12-12',
         role: 'Single',
-        cover: '/assets/singles/boxhead.jpg',
+        cover: 'img/Boxhead.jpg',
         spotifyId: 'REPLACE_SPOTIFY_TRACK_ID_BOX',
-        youtube: 'REPLACE_YOUTUBE_URL_BOX'
+        youtube: 'REPLACE_YOUTUBE_URL_BOX',
+        locked: false
       },
       {
         key: 'alien05',
         title: 'Alien05',
         date: '2026-01-09',
         role: 'Single',
-        cover: '/assets/singles/alien05.jpg',
+        cover: 'img/Alien05.jpg',
         spotifyId: 'REPLACE_SPOTIFY_TRACK_ID_ALIEN',
-        youtube: 'REPLACE_YOUTUBE_URL_ALIEN'
+        youtube: 'REPLACE_YOUTUBE_URL_ALIEN',
+        locked: false
       },
       {
         key: 'tivi',
         title: 'TiVi',
         date: '2026-01-23',
         role: 'Single',
-        cover: '/assets/singles/tivi.jpg',
+        cover: 'img/TiVi.jpg',
         spotifyId: 'REPLACE_SPOTIFY_TRACK_ID_TIVI',
-        youtube: 'REPLACE_YOUTUBE_URL_TIVI'
+        youtube: 'REPLACE_YOUTUBE_URL_TIVI',
+        locked: false
       },
       {
         key: 'dance-guns',
         title: 'Dance Guns',
         date: '2026-02-06',
         role: 'Single',
-        cover: '/assets/singles/danceguns.jpg',
-        spotifyId: 'REPLACE_SPOTIFY_TRACK_ID_DANCE',
-        youtube: 'REPLACE_YOUTUBE_URL_DANCE'
+        cover: 'img/HappyFace.jpg',   // ← SIN “/” inicial (GitHub Pages)
+        spotifyId: null,              // o deja el placeholder, da igual si locked
+        youtube: null,
+        locked: false                  // ← NUEVO
       }
     ];
 
@@ -226,33 +370,57 @@
     const grid = document.getElementById('singlesGrid');
     grid.innerHTML = singles.map(s => {
       const outNow = today >= fmtDate(s.date);
-      const badge = outNow ? `<span class=\"px-2 py-1 text-xs rounded bg-ct.accent2 text-black font-semibold\">OUT NOW</span>` : `<span class=\"px-2 py-1 text-xs rounded bg-white/10\">${new Date(s.date).toLocaleDateString(undefined,{month:'short', day:'2-digit'})}</span>`;
-      const player = outNow && s.spotifyId && s.spotifyId !== 'REPLACE_SPOTIFY_TRACK_ID_'+s.key?.toUpperCase?.() ? `
-        <iframe style=\"border-radius:12px\" src=\"https://open.spotify.com/embed/track/${s.spotifyId}?utm_source=generator\" width=\"100%\" height=\"152\" frameBorder=\"0\" allowfullscreen=\"\" allow=\"autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture\"></iframe>
-      ` : `
-        <div class=\"p-4 rounded-lg border border-white/10 text-white/60 text-sm\">Player unlocks on ${new Date(s.date).toLocaleDateString(undefined,{month:'long', day:'numeric', year:'numeric'})}.</div>
-      `;
+      const locked = !!s.locked;
+
+      const badge = locked
+        ? `<span class="px-2 py-1 text-[10px] rounded bg-white/10 ring-1 ring-white/15 uppercase tracking-widest">MYSTERY</span>`
+        : (outNow
+            ? `<span class="px-2 py-1 text-xs rounded bg-ct.accent2 text-black font-semibold">OUT NOW</span>`
+            : `<span class="px-2 py-1 text-xs rounded bg-white/10">${new Date(s.date).toLocaleDateString(undefined,{month:'short', day:'2-digit'})}</span>`);
+
+      const player = (!locked && outNow && s.spotifyId && s.spotifyId !== 'REPLACE_SPOTIFY_TRACK_ID_'+s.key?.toUpperCase?.())
+        ? `
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/${s.spotifyId}?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        `
+        : (!locked
+            ? `
+              <div class="p-4 rounded-lg border border-white/10 text-white/60 text-sm">
+                Player unlocks on ${new Date(s.date).toLocaleDateString(undefined,{month:'long', day:'numeric', year:'numeric'})}.
+              </div>
+            `
+            : ``);
+
       return `
-        <article class=\"rounded-2xl overflow-hidden bg-ct.card ring-1 ring-white/10 hover:ring-white/20 transition\">
-          <div class=\"aspect-square w-full overflow-hidden\">
-            <img src=\"${s.cover}\" alt=\"${s.title} single cover\" class=\"w-full h-full object-cover\" />
+        <article class="relative rounded-2xl overflow-hidden bg-ct.card ring-1 ring-white/10 ${locked ? 'opacity-60 grayscale cursor-not-allowed' : 'hover:ring-white/20 transition'}">
+          <div class="aspect-square w-full overflow-hidden">
+            <img src="${s.cover}" alt="${s.title} single cover" class="w-full h-full object-cover" />
           </div>
-          <div class=\"p-4 space-y-3\">
-            <div class=\"flex items-center justify-between\">
-              <h3 class=\"text-lg font-bold\">${s.title}</h3>
+          <div class="p-4 space-y-3 ${locked ? 'pointer-events-none' : ''}">
+            <div class="flex items-center justify-between">
+              <h3 class="text-lg font-bold">${s.title}</h3>
               ${badge}
             </div>
             ${player}
-            <div class=\"flex gap-2\">
-              <a href=\"${outNow ? `https://open.spotify.com/track/${s.spotifyId}` : 'REPLACE_HYPERFOLLOW_URL'}\" class=\"px-4 py-2 rounded-xl bg-white text-black font-semibold\">${outNow ? 'Listen' : 'Pre-save'}</a>
-              <a href=\"${s.youtube || '#'}\" class=\"px-4 py-2 rounded-xl border border-white/20 hover:bg-white/5\">Visualizer</a>
+            <div class="flex gap-2">
+              <a href="${outNow ? `https://open.spotify.com/track/${s.spotifyId}` : `https://distrokid.com/hyperfollow/commonthings2/${s.key}`}" class="px-4 py-2 rounded-xl bg-white text-black font-semibold">${outNow ? 'Listen' : 'Pre-save'}</a>
+              <a href="${s.youtube || '#'}" class="px-4 py-2 rounded-xl border border-white/20 hover:bg-white/5">Visualizer</a>
             </div>
           </div>
+
+          ${locked ? `
+          <!-- Overlay de bloqueo -->
+          <div class="absolute inset-0 rounded-2xl bg-black/40 backdrop-blur-sm ring-1 ring-inset ring-white/10 grid place-items-center">
+            <div class="flex items-center gap-2 text-white/80 text-sm">
+              <span class="inline-block text-base animate-pulse">🔒</span>
+              <span class="tracking-wide">Coming soon</span>
+            </div>
+          </div>` : ''}
         </article>
-      `
+      `;
     }).join('');
 
-    document.getElementById('year').textContent = new Date().getFullYear();
+document.getElementById('year').textContent = new Date().getFullYear();
+
   </script>
 </body>
 </html>
