--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Common Things — A cat in the box watching TV</title>
+  <title>Common Things</title>
   <meta name="description" content="Common Things — virtual band of five everyday things from five animation worlds. New EP: A cat in the box watching TV." />
   <link rel="icon" href="/favicon.ico" />
 
