--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h1 class="text-4xl md:text-5xl font-extrabold leading-tight mt-2">A cat in the box watching TV</h1>
         <p class="text-white/80 mt-4 max-w-prose">Six tracks, six worlds. Gato • EYE SEE U • Boxhead • Alien05 • TiVi • Dance Guns. Singles roll out first, then the full EP.</p>
         <div class="mt-6 flex flex-wrap gap-3">
-          <a href="REPLACE_HYPERFOLLOW_URL" class="px-5 py-3 rounded-xl bg-ct.accent text-black font-semibold">Pre-save on Spotify</a>
+          <a href="REPLACE_HYPERFOLLOW_URL" class="px-5 py-3 rounded-xl bg-ct.accent text-white font-semibold">Pre-save on Spotify</a>
           <a href="#singles" class="px-5 py-3 rounded-xl border border-white/20 hover:bg-white/5">Explore singles</a>
         </div>
         <div class="mt-6 flex items-center gap-4 text-white/70 text-sm">
@@ -363,10 +363,10 @@
         title: 'Dance Guns',
         date: '2026-02-06',
         role: 'Single',
-        cover: 'img/HappyFace.jpg',   // ← SIN “/” inicial (GitHub Pages)
-        spotifyId: null,              // o deja el placeholder, da igual si locked
+        cover: 'img/HappyFace.jpg',
+        spotifyId: null,
         youtube: null,
-        locked: false                  // ← NUEVO
+        locked: false
       }
     ];
 
