--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Common Things</title>
   <meta name="description"
-    content="Common Things — virtual band of five everyday things from five animation worlds. New EP: A cat in the box watching TV." />
+    content="Common Things — virtual band of five everyday things from five animation worlds. New EP Coming Soon: A cat in the box watching TV." />
   <link rel="icon" href="/favicon.ico" />
 
   <!-- Open Graph / Twitter -->
@@ -148,7 +148,7 @@
 
             <!-- BOTTOM: Texto -->
             <div class="px-6 pb-6 md:pb-8 text-center">
-              <p class="uppercase tracking-widest text-white/80 text-s">New EP</p>
+              <p class="uppercase tracking-widest text-white/80 text-s">New EP Coming Soon</p>
               <h1 class="text-4xl md:text-5xl font-extrabold leading-tight mt-2">
                 A cat in the box watching TV
               </h1>
@@ -163,7 +163,7 @@
                   <span class="w-2 h-2 rounded-full bg-ct.accent animate-pulse"></span>
                   Waterfall rollout
                 </span>
-                <span>Pop • meme/anime/cartoon vibes</span>
+                <span>Pop • meme/anime/cartoon/comic/stop-motion vibes</span>
               </div>
             </div>
           </div>
@@ -379,11 +379,11 @@
     <div class="max-w-7xl mx-auto px-4 py-10 grid md:grid-cols-2 gap-6 items-center">
       <p class="text-white/60 text-sm">© <span id="year"></span> Common Things. All rights reserved.</p>
       <div class="flex gap-3 md:justify-end">
-        <a href="REPLACE_SPOTIFY_ARTIST_URL" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">Spotify</a>
+        <a href="https://open.spotify.com/intl-es/artist/15ohei19eIufqBG5sIZOU8" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">Spotify</a>
         <a href="REPLACE_APPLEMUSIC_ARTIST_URL" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">Apple</a>
-        <a href="REPLACE_YOUTUBE_CHANNEL_URL" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">YouTube</a>
+        <a href="https://www.youtube.com/@CommonThingsOfficial" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">YouTube</a>
         <a href="REPLACE_TIKTOK_URL" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">TikTok</a>
-        <a href="REPLACE_INSTAGRAM_URL" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">Instagram</a>
+        <a href="https://www.instagram.com/ct.commonthings/" class="px-3 py-2 rounded-lg bg-white/10 hover:bg-white/15">Instagram</a>
       </div>
     </div>
   </footer>
